--- a/Assignment.html
+++ b/Assignment.html
@@ -84,14 +84,23 @@
         </table>
     </form>
     <!-- Map Tag -->
-    <iframe width="700" height="450"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.272375026202!2d72.8253226177113!3d21.18133620221297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e6c2d24d613%3A0x5c7ca1ea557092d0!2sTOPS%20Technologies!5e0!3m2!1sen!2sin!4v1699200574713!5m2!1sen!2sin"
-        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <!-- Video Adding -->
-    <iframe width="700" height="450" src="https://www.youtube.com/embed/tmLg-12LHe8?si=-IRVdD-3cBwkRr41"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
+    <table>
+        <tr>
+            <td colspan="3">
+                <iframe width="800" height="450"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.272375026202!2d72.8253226177113!3d21.18133620221297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e6c2d24d613%3A0x5c7ca1ea557092d0!2sTOPS%20Technologies!5e0!3m2!1sen!2sin!4v1699200574713!5m2!1sen!2sin"
+                    style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </td>
+            <!-- Video Adding -->
+            <td colspan="3">
+                <iframe width="700" height="450" src="https://www.youtube.com/embed/tmLg-12LHe8?si=-IRVdD-3cBwkRr41"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen=""></iframe>
+            </td>
+        </tr>
+    </table>
 </body>
 
 </html>
